GKE-Gateway-API-using-DNS-authorization-and-certificate-manager/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: gateway-external-http
  annotations:
    # Note that we are attaching our certificate map here
    networking.gke.io/certmap: gateway-certs
spec:
  # Choose your Gateway type, see https://cloud.google.com/kubernetes-engine/docs/concepts/gateway-api#gatewayclass
  gatewayClassName: gke-l7-global-external-managed
  # Attach your static IP from the previous step
  addresses:
    - type: NamedAddress
      value: gateway-ip
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
    # Optionally add HTTP listener
    # - name: http
    #   protocol: HTTP
    #   port: 80
